[package]
name = "console"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.21", optional = true }
nix = "0.23.1"
thiserror = "1.0.30"
tokio = { version = "1.16.1", optional = true }

[dev-dependencies]
tokio = { version = "1.16.1", features = [ "full" ] }

[features]
default = [ "futures_imp", "tokio_imp" ]
futures_imp = [ "futures" ]
tokio_imp = [ "tokio" ]