[package]
name = "console"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.21", optional = true }
nix = "0.23.1"
once_cell = "1.9.0"
thiserror = "1.0.30"
tokio = { version = "1.16.1", optional = true }

[dev-dependencies]
async-std = { version = "1.10.0", features = ["unstable"] } 
tokio = { version = "1.16.1", features = [ "full" ] }
futures-test = "0.3.21"

[features]
default = [ "futures_imp", "tokio_imp" ]
futures_imp = [ "futures" ]
tokio_imp = [ "tokio" ]
