[package]
name = "containerd-runc-rust"
version = "0.1.0"
authors = ["Yuna Tomida <ytomida.mmm@gmail.com>", "The containerd Authors"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/containerd/rust-extensions"
keywords = ["containerd", "containers", "runc"]
description = "A crate for consuming the runc binary in your Rust applications"
homepage = "https://containerd.io"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.19"
libc = "0.2.112"
log = "0.4.14"
mio = "0.8.0"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
signal-hook = { version = "0.3.13", features = ["extended-siginfo"] }
snafu = "0.7.0"
thiserror = "1.0.30"
tokio = "1.15.0"
uuid = "0.8.2"
