[package]
name = "containerd-runc-rust"
version = "0.1.0"
authors = ["Yuna Tomida <ytomida.mmm@gmail.com>", "The containerd Authors"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/containerd/rust-extensions"
keywords = ["containerd", "containers", "runc"]
description = "A crate for consuming the runc binary in your Rust applications"
homepage = "https://containerd.io"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-trait = "0.1.52"
chrono = { version = "0.4.19", features = ["serde"] }
dyn-clone = "1.0.4"
flate2 = "1.0.22"
futures = "0.3.19"
libc = "0.2.112"
log = "0.4.14"
mio = { version = "0.8.0", features = ["net", "os-poll"] }
nix = "0.23.1"
once_cell = "1.9.0"
path-absolutize = "3.0.11"
rand = "0.8.4"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
tempfile = "3.3.0"
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["full"] }
tokio-stream = "0.1.8"
uuid = { version = "0.8.2", features = ["v4"] }

[dev-dependencies]
flate2 = "1.0.22"
tar = "0.4.38"
xz2 = "0.1.6"
